// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design Systems/Atoms/ReplaceTextWithComponent With Match 1`] = `
Array [
  "Hi you should ",
  <button
    data-testid="button replace me"
    onClick={[Function]}
  >
    replace me
  </button>,
  "",
]
`;

exports[`Storyshots Design Systems/Atoms/ReplaceTextWithComponent With Multiple Match 1`] = `
Array [
  "Hi you should ",
  <button
    data-testid="button replace me"
    onClick={[Function]}
  >
    replace me
  </button>,
  " and ",
  <button
    data-testid="button me too"
    onClick={[Function]}
  >
    me too
  </button>,
  "",
]
`;

exports[`Storyshots Design Systems/Atoms/ReplaceTextWithComponent Without Match 1`] = `"Hi you should do nothing"`;
